--- a/code-gen/templates/ping-cloud/kustomization.yaml.tmpl
+++ b/code-gen/templates/ping-cloud/kustomization.yaml.tmpl
@@ -112,7 +112,7 @@ patchesJson6902:
     group: apps
     version: v1
     kind: StatefulSet
-    name: pingdirectory
+    name: ds
   patch: |
     - op: add
       path: /spec/template/spec/containers/0/envFrom/-
