--- a/code-gen/templates/cluster-tools/kustomization.yaml.tmpl
+++ b/code-gen/templates/cluster-tools/kustomization.yaml.tmpl
@@ -12,6 +12,7 @@ resources:
 
 # Include flux CD here so flux can update itself in the future
 - ${K8S_GIT_URL}/k8s-configs/cluster-tools/git-ops?ref=${K8S_GIT_BRANCH}
+- known-hosts-config.yaml
 
 patchesStrategicMerge:
 
@@ -80,6 +81,18 @@ patchesStrategicMerge:
             name: flux-ssh-config
             defaultMode: 0644
 
+### Deploy key to the cluster state repo ###
+- |-
+  apiVersion: v1
+  kind: Secret
+  type: Opaque
+  metadata:
+    name: flux-git-deploy
+    namespace: flux
+  data:
+    identity: |
+      ${SSH_ID_KEY_BASE64}
+
 ### Cloud-watch logging and monitoring ###
 - |-
   apiVersion: v1
@@ -129,7 +142,7 @@ patchesJson6902:
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value:
-        --default-ssl-certificate=cert-manager/acme-tls-cert
+        --default-ssl-certificate=${PING_CLOUD_NAMESPACE}/acme-tls-cert
 
 - target:
     group: apps
@@ -141,7 +154,7 @@ patchesJson6902:
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value:
-        --default-ssl-certificate=cert-manager/acme-tls-cert
+        --default-ssl-certificate=${PING_CLOUD_NAMESPACE}/acme-tls-cert
 
 ### Cluster auto-scaler ###
 - target:
@@ -151,15 +164,27 @@ patchesJson6902:
     name: cluster-autoscaler
     namespace: kube-system
   patch: |-
-   - op: add
-     path: /spec/template/spec/containers/0/command/-
-     value:
-       --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/${CLUSTER_NAME}
-   - op: add
-     path: /spec/template/spec/containers/0/env
-     value:
-       - name: AWS_REGION
-         value: ${REGION}
+    - op: add
+      path: /spec/template/spec/containers/0/command/-
+      value:
+        --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/${CLUSTER_NAME}
+    - op: add
+      path: /spec/template/spec/containers/0/env
+      value:
+        - name: AWS_REGION
+          value: ${REGION}
+
+# Change the namespace of the ACME certificate to the ping-cloud namespace
+- target:
+    group: certmanager.k8s.io
+    version: v1alpha1
+    kind: Certificate
+    name: acme-tls-cert
+    namespace: cert-manager
+  patch: |-
+    - op: replace
+      path: /metadata/namespace
+      value: ${PING_CLOUD_NAMESPACE}
 
 ### Logs dashboard ###
 - target:
